Metodo listarQuartosDisponiveis refatorado para aceitar filtro por data